deploy/retrieveUnpackaged/objects/NPS_Survey__c.object
<CustomObject>
    <description>Survey results from Clicktools</description>
    <fields>
        <fullName>Account_Num__c</fullName>
        <formula>Account__r.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS Surveys</relationshipLabel>
        <relationshipName>R00N50000001njFYEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <inlineHelpText>Used in response to an NPS survey result.</inlineHelpText>
        <label>Action Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Completion_Date__c</fullName>
        <inlineHelpText>Please enter the date you anticipate your follow ups being completed.</inlineHelpText>
        <label>Anticipated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDC_Email__c</fullName>
        <description>BDCs email address so they receive NPS notification.</description>
        <inlineHelpText>BDCs email address so they receive NPS notification.</inlineHelpText>
        <label>BDC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPS Surveys</relationshipLabel>
        <relationshipName>R00N50000001njFdEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detractor_Comments_Hidden__c</fullName>
        <label>Detractor Comments Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Link_to_Results__c</fullName>
        <description>Link to the exact result.</description>
        <inlineHelpText>Click on the link to take you to the data warehouse record for this result.</inlineHelpText>
        <label>Link to Results</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Month_1_Follow_Up__c</fullName>
        <inlineHelpText>Please enter your notes from the first month follow up.</inlineHelpText>
        <label>Month 1 Follow Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Month_2_Follow_Up__c</fullName>
        <inlineHelpText>Please enter your notes from the second month follow up.</inlineHelpText>
        <label>Month 2 Follow Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Month_3_Follow_Up__c</fullName>
        <inlineHelpText>Please enter your notes from the third month follow up.</inlineHelpText>
        <label>Month 3 Follow Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Production_Id__c</fullName>
        <description>Used for CI integration</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for CI integration</inlineHelpText>
        <label>NPS Production Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Overall_Recommendation_Hidden__c</fullName>
        <label>Overall Recommendation Hidden</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Recommendation__c</fullName>
        <formula>If
(
(Overall_Recommendation_Hidden__c) = &quot;0 - Definitely not&quot;,0,
value((left((Overall_Recommendation_Hidden__c),2)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passive_Comments_Hidden__c</fullName>
        <label>Passive Comments Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promoter_Comments_Hidden__c</fullName>
        <label>Promoter Comments Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Comments__c</fullName>
        <formula>if(Promoter_Comments_Hidden__c =&quot;&quot;, (if(Detractor_Comments_Hidden__c=&quot;&quot;, Passive_Comments_Hidden__c,Detractor_Comments_Hidden__c)), Promoter_Comments_Hidden__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Date__c</fullName>
        <inlineHelpText>Date that the survey was completed on.</inlineHelpText>
        <label>Survey Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Link_in_DW__c</fullName>
        <inlineHelpText>Please copy and paste into the address bar of your browser.  Normal text fields can only be 255 characters and the new URL is longer in most cases.</inlineHelpText>
        <label>Survey Link in DW</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click on the Create CORE Ticket button (appears while in non-edit mode).  DO NOT MANUALLY CHECK THIS BOX. This will check the box and let CORE know to create a ticket.  When the ticket is created CORE will update the Ticket Number and Ticket Status field.</inlineHelpText>
        <label>Ticket Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Creation_Status__c</fullName>
        <inlineHelpText>Indicates if the Ticket has been submitted and/or if it has been returned by CORE.  DO NOT MANUALLY UPDATE THIS FIELD.</inlineHelpText>
        <label>Ticket Creation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <inlineHelpText>This is the ticket number from CORE.  CORE will populate this field when the ticket has been created.</inlineHelpText>
        <label>Ticket Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <inlineHelpText>This the current status of the ticket for the NPS Survey.  CORE will populate the Status.</inlineHelpText>
        <label>Ticket Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>NPS Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Num__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NPS Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_update_Survey_Name</fullName>
        <active>true</active>
        <description>Users cannot update survey names - will mess up reporting</description>
        <errorConditionFormula>AND(ISCHANGED(Name),
NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
        <errorMessage>You cannot change the Survey Name.  This will cause reporting issues.</errorMessage>
    </validationRules>
</CustomObject>